# SketchBot

./: Dockerfile  README.md  config.yml  pyproject.toml
bot/: __main__.py  constants.py
bot/core/: bot.py  i18n.py
bot/core/db/: infractions.py  tickets.py
bot/exts/mod/: infractions.py
bot/exts/roles/: __init__.py  roles.py
bot/exts/tickets/: __init__.py  create.py  delete.py  tickets.py
bot/exts/tickets/locales/: uk.po
bot/exts/utils/: __init__.py  avatar.py  roles.py  utils.py
